--- a/res/css/style.css
+++ b/res/css/style.css
@@ -101,6 +101,7 @@ footer {
     min-width: 100vw;
     background-color: #f8f9fa;
     margin: 20px 0px;
+    padding: 10px;
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -118,6 +119,7 @@ footer {
         background-color: #f8f9fa;
         margin: 20px;
         border-radius: 15px;
+        padding: 10px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
@@ -128,3 +130,28 @@ footer {
 .subpage-active {
     background-color: #dae0e5 !important;
 }
+
+/* ADD NEW IMAGE DESIGN */
+.my-image {
+    text-align: center;
+    padding: 10px;
+}
+
+.img-options {
+    margin-top: 5px;
+    text-align: center;
+    color: #616161;
+}
+
+.img-options i {
+    font-size: 23px;
+    margin: 3px;
+}
+
+.img-options i:hover {
+    cursor: pointer;
+}
+
+/* EDIT IMAGE DESIGN */
+
+/* GEO POSITION DESIGN */
