user account administration not responsive delete missing

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -187,4 +187,26 @@ footer {
 }
 
 /* USER ADMINISTRATION DESIGN */
-
+.user_account_banner {
+    margin-top: 80px;
+}
+.useraccount_cont{
+    border-radius: 15px;
+    padding: 30px;
+    background-color: #f8f9fa;
+}
+ .table_user{
+font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+}
+.table_user th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: white;
+}
+.table_user tr,th,td{
+  border: 0.1em solid #ddd;
+  padding: 1em;
+  background-color: white;
+}
