--- a/res/css/style.css
+++ b/res/css/style.css
@@ -24,7 +24,7 @@ footer {
     line-height: 30px;
 }
 
-#logged_div{
+#logged_div {
     margin-right: 10px;
 }
 
@@ -177,8 +177,12 @@ footer {
 }
 
 .selected-image {
-    width: 500px;
+    max-width: 400px;
     height: auto;
+}
+
+.jcrop-active {
+    margin: auto!important;
 }
 
 /* GEO POSITION DESIGN */
@@ -204,35 +208,42 @@ footer {
 .user_account_banner {
     margin-top: 80px;
 }
-.useraccount_cont{
+
+.useraccount_cont {
     border-radius: 15px;
     padding: 30px;
     background-color: #f8f9fa;
 }
- .table_user{
-font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  margin: auto;
+
+.table_user {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    margin: auto;
 }
-#heading_table{
+
+#heading_table {
     text-align: center !important;
 }
-#table_div{
+
+#table_div {
     width: 100%;
     height: 100%;
 }
-.table_user th{
+
+.table_user th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: white;
 }
-.table_user tr,th,td{
-  border: 0.1em solid #ddd;
-  padding: 1em;
-  background-color: white;
+
+.table_user tr, th, td {
+    border: 0.1em solid #ddd;
+    padding: 1em;
+    background-color: white;
 }
-.acc_btn{
-    padding: 1px!important;
-    margin: 5px!important;
+
+.acc_btn {
+    padding: 1px !important;
+    margin: 5px !important;
 }
