--- a/res/css/style.css
+++ b/res/css/style.css
@@ -183,24 +183,45 @@ footer {
 }
 
 .jcrop-active {
-    margin: auto!important;
+    margin: auto !important;
 }
 
 /* GEO POSITION DESIGN */
+#map {
+    width: 100%;
+    height: 350px;
+}
+
+.geo-image {
+    height: 50px;
+    width: auto;
+}
+
+.leaflet-marker-icon {
+    height: 50px;
+    width: auto;
+}
+
+.my-images {
+    margin: 30px 0px;
+}
 
 /* USER DATA DESIGN */
-.user_data_con{
+.user_data_con {
     margin-bottom: 20px;
 }
+
 .user_data {
     border-radius: 15px;
     padding: 30px;
     background-color: #f8f9fa;
 }
-.h3_user_data{
+
+.h3_user_data {
     margin: 5px;
     padding: 5px;
 }
+
 .user_data h3 {
     margin-bottom: 20px;
     margin-top: 5px;
